# advanced-collections

./: README.md  pyproject.toml  setup.py
advanced_collections/: __init__.py  abc.py
advanced_collections/_src/: big_dict.py  big_list.py  comparable.py  key_comparable.py  mutable_sequence_islice.py  mutable_sequence_islice_proxy.py  sequence_islice.py  sequence_islice_proxy.py  supports_length_hint.py  viewable_mutable_sequence.py  viewable_sequence.py
advanced_collections/concurrent/_src/: synchronize.py  synchronize_descriptor.py  synchronized.py
advanced_collections/queue/: __init__.py
advanced_collections/queue/_src/: abc_queue.py  deque.py  fifo.py  lifo.py  max_queue.py  min_queue.py  queue_protocol.py
advanced_collections/sorted/: __init__.py  abc.py
advanced_collections/sorted/_src/: abstract_set.py  collection.py  list.py  mutable_sequence.py  mutable_sequence_between_proxy.py  mutable_set.py  sequence.py  sequence_between.py  sequence_between_proxy.py  sequence_islice.py  sequence_islice_proxy.py
more_collections/: __init__.py  _memlist.py  _seglist.py
more_collections/sorted/: __init__.py  _abc.py  _abc_constructor.py  _abc_iterable.py  _abc_key_constructor.py  _abc_key_iterable.py  _abc_key_sequence.py  _abc_key_set.py  _abc_mapping.py  _abc_sequence.py  _abc_set.py  _sorted_dict.py  _sorted_iterable.py  _sorted_key_iterable.py  _sorted_list.py  _sorted_memlist.py  _sorted_set.py  _sorted_tuple.py  abc.py
